--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,5 @@ node_js:
   - "7"
 
 before_script:
-  - npm update
-  - npm install -g gulp
-  - npm install
+  - npm install -g webpack
+  - webpack
