--- a/package.json
+++ b/package.json
@@ -22,28 +22,36 @@
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
     "css-loader": "0.26.1",
-    "jquery": "^2.2.1",
-    "jsdom": "^8.1.0",
-    "mocha": "^2.4.5",
-    "react-addons-test-utils": "^0.14.7",
-    "react-datatable": "0.0.31",
-    "style-loader": "0.13.1",
+    "eslint": "^3.19.0",
+    "eslint-config-google": "^0.8.0",
+    "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "^v2.0.0-rc.1",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.26.0",
+    "jquery": "^2.2.1",
+    "jsdom": "^8.1.0",
+    "mocha": "^2.4.5",
     "postcss-loader": "^1.2.2",
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-test-utils": "^0.14.7",
+    "react-datatable": "0.0.31",
+    "react-forms": "beta",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-progressbar": "^1.4.6",
+    "style-loader": "0.13.1",
+    "superagent": "^3.5.2",
+    "sweetalert-react": "^0.4.10",
     "url-loader": "0.5.7",
     "webpack": "^2.2.1",
     "webpack-cleanup-plugin": "^0.4.2",
     "webpack-dashboard": "^0.3.0",
-    "webpack-dev-server": "^2.4.1",
     "react-addons-css-transition-group": "^15.4.2",
     "superagent": "^3.5.2",
     "sweetalert-react": "^0.4.10",
     "react-forms": "beta",
     "react-progressbar": "^1.4.6",
-    "humanize-plus": "^1.8.2"
+    "humanize-plus": "^1.8.2",
+    "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
@@ -52,12 +60,15 @@
     "lodash": "^3.10.1",
     "moment": "^2.17.1",
     "react": "^0.14.3",
+    "react-autocomplete": "^1.5.3",
     "react-bootstrap-table": "^2.7.1",
     "react-bs-notifier": "^4.1.3",
     "react-chartjs-2": "^2.1.0",
     "react-dom": "^0.14.3",
     "react-forms": "beta",
+    "react-google-recaptcha": "^0.8.1",
     "react-progressbar": "1.4.6",
+    "react-recaptcha": "^2.3.1",
     "react-redux": "^4.0.0",
     "react-router": "^2.8.1",
     "react-tag-autocomplete": "^5.1.0",
